# crtp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
benchmark/: CMakeLists.txt  main.cpp
benchmark/crtp/storage/: storage.bm.cpp
include/crtp/: self.hpp  type_list.hpp
include/crtp/storage/: storage.decl.hpp  storage.hpp  storage.impl.hpp
include/crtp/storage/builder/: builder.decl.hpp  builder.hpp  builder.impl.hpp
include/crtp/storage/concept/: concept.decl.hpp  concept.hpp  concept.impl.hpp
include/crtp/storage/detail/: concept.decl.hpp  concept.hpp  concept.impl.hpp
include/crtp/storage/hybrid/: hybrid.decl.hpp  hybrid.hpp  hybrid.impl.hpp
include/crtp/storage/on_heap/: on_heap.decl.hpp  on_heap.hpp  on_heap.impl.hpp
include/crtp/storage/on_stack/: on_stack.decl.hpp  on_stack.hpp  on_stack.impl.hpp
include/crtp/storage/swap/: swap.decl.hpp  swap.hpp  swap.impl.hpp
include/crtp/storage/traits/: traits.hpp
include/crtp/storage/value/: value.decl.hpp  value.hpp  value.impl.hpp
include/crtp/storage/value/concept/: concept.decl.hpp  concept.hpp  concept.impl.hpp
mock/: CMakeLists.txt  custom.cpp  custom.hpp  custom.impl.hpp  dummy.cpp
natvis/: crtp.natvis
src/: CMakeLists.txt
unit_test/: CMakeLists.txt  custom.cpp  custom.hpp  custom.impl.hpp  main.cpp
unit_test/crtp/: type_list.test.cpp
unit_test/crtp/storage/: storage.test.cpp  swap.test.cpp  value.test.cpp
